--- a/app/src/main/res/layout-land/fragment_record.xml
+++ b/app/src/main/res/layout-land/fragment_record.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/fragment_record"
@@ -12,9 +12,6 @@
         android:id="@+id/btnRecord"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentBottom="true"
         android:layout_gravity="bottom|center_horizontal"
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
@@ -22,38 +19,48 @@
         app:backgroundTint="@color/primary"
         app:elevation="6dp"
         app:fabSize="normal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
         app:srcCompat="@drawable/ic_mic_white_36dp" />
 
     <Chronometer
         android:id="@+id/chronometer"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/recordProgressBar"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="57dp"
-        android:fontFamily="sans-serif-light"
-        android:textSize="60sp" />
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:fontFamily="sans-serif"
+        android:gravity="center"
+        android:singleLine="true"
+        android:textSize="40sp"
+        app:layout_constraintBottom_toBottomOf="@+id/recordProgressBar"
+        app:layout_constraintEnd_toEndOf="@+id/recordProgressBar"
+        app:layout_constraintStart_toStartOf="@+id/recordProgressBar"
+        app:layout_constraintTop_toTopOf="@+id/recordProgressBar" />
 
     <com.budiyev.android.circularprogressbar.CircularProgressBar
         android:id="@+id/recordProgressBar"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        app:indeterminate="false"
-        app:maximum="100"
-        app:progress="100"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_marginTop="27dp"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="27dp"
         app:animateProgress="true"
+
         app:backgroundStrokeColor="@color/white"
         app:backgroundStrokeWidth="5dp"
         app:drawBackgroundStroke="true"
         app:foregroundStrokeCap="round"
         app:foregroundStrokeColor="@color/primary"
         app:foregroundStrokeWidth="2.5dp"
+        app:indeterminate="false"
         app:indeterminateMinimumAngle="45"
         app:indeterminateRotationAnimationDuration="60000"
         app:indeterminateSweepAnimationDuration="1000"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:maximum="100"
+        app:progress="100"
         app:progressAnimationDuration="100"
         app:startAngle="270" />
 
@@ -61,33 +68,36 @@
         android:id="@+id/btnPause"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentBottom="true"
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
         android:layout_marginBottom="16dp"
         android:fontFamily="sans-serif-condensed"
         android:icon="@drawable/ic_media_pause"
         android:text="@string/pause_recording_button"
         android:textAllCaps="true"
-        app:elevation="2dp" />
+        app:elevation="2dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/btnRecord"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/recording_status_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/btnRecord"
-        android:layout_alignParentRight="true"
-        android:layout_toRightOf="@+id/recordProgressBar"
-        android:gravity="center"
-        android:textAlignment="center"
-        android:layout_marginLeft="16dp"
-        android:layout_marginBottom="16dp"
+        android:layout_width="145dp"
+        android:layout_height="63dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="8dp"
         android:fontFamily="sans-serif-condensed"
         android:text="@string/record_prompt"
         android:textColor="@color/primary_text"
         android:textSize="17sp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/btnRecord"
+        app:layout_constraintEnd_toEndOf="@+id/recordProgressBar"
+        app:layout_constraintWidth_default="wrap" />
 
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
