--- a/app/src/main/res/layout/dialog_rename_file.xml
+++ b/app/src/main/res/layout/dialog_rename_file.xml
@@ -17,4 +17,12 @@
         android:focusedByDefault="true"
         android:maxLines="1" />
 
+    <TextView
+        android:text=".mp4"
+        android:focusable="false"
+        android:focusableInTouchMode="false"
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
 </LinearLayout>
