--- a/app/src/main/res/values/array.xml
+++ b/app/src/main/res/values/array.xml
@@ -5,7 +5,7 @@
         <item>MP4</item>
         <!--item>#00FFFF</item-->
 
-        <item>MP3</item>
+        <item>MP3(converted)</item>
         <!--item>#F0FFFF</item-->
 
         <item>AMR</item>
